# stoplight

./: .gitignore  LICENSE  README.md  config.json  pyproject.toml
.github/workflows/: main.yml  publish.yml
stoplight/: main.py  rc.py  repo.py  run.py
tests/: test_command_green.py  test_command_red.py  test_command_status.py  test_rc.py  test_repo.py  test_run.py  test_stoplight.py
