[tool.poetry]
name = "pystoplight"
version = "0.1.3"
description = ""
authors = ["Maria Kim Heinert <yeeunmariakim@gmail.com>"]

packages = [
  { include = "stoplight"}
]

[tool.poetry.scripts]
stoplight = "stoplight.run:app"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.27.1"
toml = "^0.10.2"
typer = {extras = ["all"], version = "^0.4.0"}

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-mock = "^3.6.1"
pytest-cov = "^3.0.0"
taskipy = "^1.9.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
test = "pytest --cov-report term-missing --cov-fail-under=70  --cov-branch --cov=stoplight tests/"
